# DotMed

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
contexto/: planilha-de-procedimentos.csv
faiss_docs_embeddings/: index.faiss  index.pkl
