[project]
name = "dotmed"
version = "0.1.0"
description = "Este projeto tem como objetivo implementar o agente de consultas da DotMed, uma clinica e laboratorio de exames."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "langchain==0.3.25",
    "langchain-community==0.3.25",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.1.0",
    "langchain-qdrant>=0.2.1",
    "langgraph==0.4.8",
    "pandas>=3.0.3",
    "pypdf==5.6.0",
    "python-dotenv==1.1.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torchvision",
]
